--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
+    "babel-plugin-macros": "^3.1.0",
+    "postcss": "^8.4.33",
     "tailwindcss": "^3.0.7"
   }
 }
