--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-next": "0.0.0",
+    "next": "^14.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.0.7"
   }
