--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
     "emailjs-com": "^3.2.0",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "notiflix": "^3.2.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
