--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
+    "body-parser": "^1.20.2",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^8.1.1",
     "notiflix": "^3.2.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
@@ -26,9 +28,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "next build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "next dev"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +51,7 @@
       "last 1 safari version"
     ]
   },
+
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.0",
@@ -57,5 +61,7 @@
     "next": "^14.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.0.7"
+    
   }
+  
 }
