--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-command = "npm runs build"
-publish = ".next"
+command = "npm run build"
+publish = "build"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
