--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
 command = "npm run build"
-publish = "build"
+# publish = "build"
+  publish = "out"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
