--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.2"
   },
-  "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "next dev"
-  },
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+},
   "browserslist": {
     "production": [
       ">0.2%",
