--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.2"
   },
-"scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
-},
+  "scripts": {
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "next dev"
+  },
+
   "browserslist": {
     "production": [
       ">0.2%",
