--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 command = "npm run build"
-# publish = "build"
-  publish = "out"
+publish = "build"
+
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
