--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build &&nextexport",
+    "start": "next start"
   },
 
   "browserslist": {
