--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.2"
   },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build &&nextexport",
-    "start": "next start"
+ "scripts": {
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "next dev"
   },
 
   "browserslist": {
