--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,20 @@
-[build]
-command = "npm run build "
-publish = "build"
-  # publish = "out"
+# [build]
+# command = "npm run build "
+# publish = "build"
+#   # publish = "out"
 
+
+# [[plugins]]
+#   package = "@netlify/plugin-nextjs"
+
+# [[plugins]]
+#   package = "netlify-plugin-cache-nextjs"
+[build]
+  command = "next build && next export"
+  publish = "out"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-[[plugins]]
-  package = "netlify-plugin-cache-nextjs"
+[build.environment]
+  NETLIFY_NEXT_PLUGIN_SKIP = "true"
