--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,11 @@
-# [build]
-# command = "npm run build "
-# publish = "build"
-#   # publish = "out"
-
-
-# [[plugins]]
-#   package = "@netlify/plugin-nextjs"
-
-# [[plugins]]
-#   package = "netlify-plugin-cache-nextjs"
 [build]
-  command = "next build && next export"
-  publish = "out"
+command = "npm run build "
+publish = "build"
+  # publish = "out"
+
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-[build.environment]
-  NETLIFY_NEXT_PLUGIN_SKIP = "true"
+[[plugins]]
+  package = "netlify-plugin-cache-nextjs"
