--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nnine",
   "version": "0.1.0",
@@ -25,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "build": "next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "next dev"
@@ -46,7 +47,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.0",
     "babel-plugin-macros": "^3.1.0",
-    "next": "^14.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.0.7"
   }
