--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
-
 {
   "name": "nnine",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@netlify/plugin-nextjs": "^5.1.2",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
@@ -26,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "next build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "next dev"
@@ -47,6 +45,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "next": "^14.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.0.7"
   }
