--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,18 @@
 [build]
+  base = "/"
   command = "npm run build"
-  publish = "build" # Update this to match your Next.js build output directory
-
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+  publish = "/dist/"
+  [build.environment]
+    NODE_VERSION = "18"
+[functions]
+  external_node_modules = ["express", "mongodb"]
+  node_bundler = "esbuild"
+[[redirects]]
+  force = true
+  from = "/api/*"
+  status = 200
+  to = "/.netlify/functions/api/:splat"
+[[redirects]]
+  from = "/*"
+  status = 200
+  to = "/index.html"
