--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   base = "/"
   command = "npm run build"
-  publish = "/dist/"
-  [build.environment]
-    NODE_VERSION = "18"
+  publish = "build/"
+[build.environment]
+  NODE_VERSION = "18"
 [functions]
   external_node_modules = ["express", "mongodb"]
   node_bundler = "esbuild"
