--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
   command = "npm run build"
-  publish = "build/"
+  publish = "out"
 [build.environment]
   NODE_VERSION = "18"
 [functions]
