--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@netlify/plugin-nextjs": "^5.1.2",
     "autoprefixer": "^10.4.0",
     "babel-plugin-macros": "^3.1.0",
     "next": "^14.1.0",
