--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
   command = "npm run build"
-  publish = "/opt/build/repo/out"
+  publish = "out"
 [build.environment]
   NODE_VERSION = "18"
 [functions]
@@ -21,4 +21,4 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
   [plugins.inputs]
-    publishDir = "/opt/build/repo/out"
+    publishDir = "out"
