--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
+  base = "/"
   command = "npm run build"
-  publish = "out"
+  publish = "out/"
+
 [build.environment]
   NODE_VERSION = "18"
 [functions]
