--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
-  base = "/"
-  command = "npm run build"
-  publish = "out/"
 
+  command = "npm run build"
+  publish = "out"
 [build.environment]
   NODE_VERSION = "18"
 [functions]
