--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
-command = "npm run build"
-# publish = "build"
-  publish = "out"
-
+ command = "npm run build"
+ publish = "build"
+  
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
