--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,16 @@
-[[plugins]]
-package = "@netlify/plugin-nextjs"
-
 [build]
-publish = ".next"
+ command = "npm run build"
+ publish = "build"
+  
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
+[[plugins]]
+  package = "netlify-plugin-cache-nextjs"
+  
+[[redirects]]
+  from = "/*"
+  status = 200
+  to = "/index.html"
+
+
