--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "next dev"
   },
   "browserslist": {
     "production": [
