--- a/netlify.toml
+++ b/netlify.toml
@@ -6,9 +6,7 @@
  package = "netlify/plugin-nextjs"
 
  [build.environment]
-  NETLIFY_NEXT_PLUGIN_SKIP= "true",
-  CI= "false"
-
+  NETLIFY_NEXT_PLUGIN_SKIP= "true"
   
   
   
