--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,7 @@
   publish = "out"
 
 [[plugins]]
- package = "netlify/plugin-nextjs"
+ package = "@netlify/plugin-nextjs"
 
- [build.environment]
+[build.environment]
   NETLIFY_NEXT_PLUGIN_SKIP= "true"
-  
-  
-  
