--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build] 
-  command = "next build && next export"
-  publish = "out"
+  command = "next run build"
+  publish = "build"
 
 [[plugins]]
  package = "@netlify/plugin-nextjs"
