--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-transition-group": "^4.4.2",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.2"
@@ -48,6 +48,7 @@
     "babel-plugin-macros": "^3.1.0",
     "netlify-plugin-cache": "^1.0.3",
     "next": "^14.1.0",
+    "next-on-netlify": "^2.7.2",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.0.7"
   }
