--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
     command = "npm run build"
-    publish = "out_publish"
+    publish = "build"
 
 [[plugins]]
     package = "netlify-plugin-cache"
