--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
-command = "npm run build"
-publish = "build"
+    command = "npm run build"
+    publish = "build"
 
 [[plugins]]
-  package = "@netlify/plugin-nextjs"
-
-[[plugins]]
-  package = "netlify-plugin-cache-nextjs"
+    package = "netlify-plugin-cache"
