--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal-image": "^2.6.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-transition-group": "^4.4.2",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.2"
@@ -43,9 +43,12 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@netlify/plugin-nextjs": "^5.1.2",
     "autoprefixer": "^10.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "netlify-plugin-cache": "^1.0.3",
     "next": "^14.1.0",
+    "next-on-netlify": "^2.7.2",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.0.7"
   }
