nnn Revert "feat:upadte"
This reverts commit 7197b0143004246a89c23c9a515e741209a73fbf.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
-    command = "npm run build"
-    publish = "out_publish"
+command = "npm run build"
+publish = "build"
 
 [[plugins]]
-    package = "netlify-plugin-cache"
+  package = "@netlify/plugin-nextjs"
+
+[[plugins]]
+  package = "netlify-plugin-cache"
